--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -30,6 +30,10 @@
 //= require lib/jquery.trap
 //= require lib/jquery.is_visible_within
 
+//= require_tree .
+//= require jquery
+//= require jquery_ujs
+
 //= require top_menu
 //= require action_menu
 //= require breadcrumb
